﻿Subtitle Edit Changelog

3.3.10 (xth November 2013)
* NEW:
   * Added new subtitle formats
* IMPROVED:
   * OCR max. error% is now saved for bluray - thx Zoltán
* FIXED:
   * F11 (Set start time) sometimes kept duration - thx Rinus/Quetsbeek 
   * Cavana 890 now works with Hebrew again - thx Yaniv
   * Crash on bad images when using ocr via Tesseract+Modi - thx Barry
   * Fix regarding italics in remove text for HI - thx cipry15
   * Now allows html tags in SAMI - thx estima


3.3.9 (19th October 2013)
* NEW:
   * Added new subtitle formats
   * Edit -> Modify selection
   * Shortcuts keys Ctrl+up/down now move contents in 
     "Multi-Replace" list view - thx Ivandrofly
* IMPROVED:
   * Updated Czech language file - thx Trottel
   * Updated Russian language file - thx Sergey
   * Updated Brazilian Portuguese langauge file - thx Igor
   * Updated German langauge file - thx Siegwarth
   * Updated Bulgarian language file - thx Iavor
   * Updated word lists - thx Siegwarth
   * Minor improvements for EBU open subtitling
   * Added "Allow overlap in waveform" as setting
   * Large "Image compare" OCR databases now loads much faster - thx Zoltan
   * Can now read Russian in Cavena 890
   * Waveform generation now uses current audio track (VLC only atm)
   * Open original subtitle now allows EBU/890/PAC formats - thx Andreas
   * "DCinema SMPTE" format is now valid (uses xsd) - thx Wolfgang
   * Improved italic fix - thx XhmikosR
   * NCI CAPT format can now also read version 1.2 files
   * Pageup/Pagedown can now be used in custom shortcuts
* FIXED:
   * Crash in export of images - thx Eros UK
   * Crash in OCR via "Image compare" with large image databases - thx Zoltan
   * Improved baseline in export of images - thx THXTEX
   * Fixed duration (in some players) in blu-ray sup export - thx THXTEX
   * Fixed bug in SSA color - thx Stuart
   * Fixed some letters in Cavena 890 format - thx Calle
   * Some fixes/improvements for "Unknown subtitle format importer"